Fix + char and align left volume liste headers

--- a/hzrequestspanel/static/dashboard/project/hzrequestspanel/hzrequestspanel.css
+++ b/hzrequestspanel/static/dashboard/project/hzrequestspanel/hzrequestspanel.css
@@ -135,7 +135,7 @@ md-dialog {
 }
 
 #div_volume_data_headers div{
-    text-align: center;
+    text-align: left;
     font-weight: bold;
 }
 
